--- a/notebooks/Calibration - Figure.ipynb
+++ b/notebooks/Calibration - Figure.ipynb
@@ -1164,7 +1164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.12 ('0726_noise2self')",
    "language": "python",
    "name": "python3"
   },
@@ -1178,11 +1178,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "e05d4d356e2e751c8ff7d58c9a2a228b6b8a79db382b927e3773744fd57ca6e5"
+    "hash": "e5b7b4b87f1232292414b0b2465daa4c9a5fef42931fa5ac6e14cc171faea196"
    }
   }
  },
