--- a/notebooks/Single-Shot Denoising2.ipynb
+++ b/notebooks/Single-Shot Denoising2.ipynb
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ADMIN\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\ADMIN\\anaconda3\\envs\\0726_noise2self\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -206,20 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "r'''\n",
+    "[ masker ]\n",
+    ">>> masker.grid_size = 4\n",
+    ">>> masker.n_masks = 16\n",
+    ">>> makser.mode = 'interpolate'\n",
+    ">>> masker.infer_single_pass = False\n",
+    ">>> masker.include_mask_as_input = False\n",
+    "'''\n",
+    "\n",
     "import torch\n",
     "noisy = torch.Tensor(noisy_image[np.newaxis, np.newaxis])\n",
     "# noisy_image = cv2.normalize(img_resize, None, 0, 255, cv2.NORM_MINMAX)\n",
     "from mask import Masker\n",
-    "masker = Masker(width = 4, mode='interpolate')"
+    "masker = Masker(width = 4, mode='zero')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +282,7 @@
        "torch.Tensor"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,36 +377,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. 셀의 코드를 검토하여 오류의 가능한 원인을 식별하세요. 자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'> 여기 </a> 를 클릭하세요. 자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "scaler = MinMaxScaler() \n",
-    "scaler.fit(test_noisy)\n",
-    "norm_rs = scaler.transform(test_noisy)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -413,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +413,7 @@
        "186112"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -454,13 +433,122 @@
        "(640000,)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "noisy_image.ravel().shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** shape[-2:] : torch.Size([800, 800])\n",
+      "** A : tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        ...,\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.]])\n",
+      "** cnt : 40000\n",
+      "\n",
+      "\n",
+      "** mask : tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        ...,\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.]])\n",
+      "\n",
+      "** mask_inv : tensor([[0., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        ...,\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "net_input, mask = masker.mask(noisy, 0 % (masker.n_masks - 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[0.0000, 0.0414, 0.1217,  ..., 0.0736, 0.1586, 0.0932],\n",
+       "          [0.1393, 0.1238, 0.1587,  ..., 0.3249, 0.0962, 0.1586],\n",
+       "          [0.0500, 0.1440, 0.0788,  ..., 0.2661, 0.2746, 0.1627],\n",
+       "          ...,\n",
+       "          [0.3087, 0.1358, 0.1126,  ..., 0.6423, 0.5888, 0.9803],\n",
+       "          [0.2104, 0.1938, 0.2382,  ..., 0.5456, 0.6154, 0.8653],\n",
+       "          [0.1134, 0.3116, 0.4529,  ..., 0.8360, 0.2711, 0.0779]]]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net_output = model(net_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[-2.8527e-01,  8.2211e-02, -3.8811e-02,  ...,  1.4107e-01,\n",
+       "           -1.3315e-01,  2.8640e-02],\n",
+       "          [-2.7821e-01,  1.0886e-01,  8.5124e-02,  ..., -2.2373e-01,\n",
+       "           -4.3315e-01,  6.0966e-02],\n",
+       "          [-4.5250e-01, -3.8207e-01, -4.3020e-02,  ..., -2.5703e-01,\n",
+       "           -2.8034e-01,  2.3955e-01],\n",
+       "          ...,\n",
+       "          [ 3.6397e-02,  2.1582e-01,  4.0775e-01,  ...,  8.4647e-02,\n",
+       "           -3.7253e-01,  1.0650e+00],\n",
+       "          [-1.0628e-01, -1.8827e-01, -1.9575e-01,  ..., -7.0656e-01,\n",
+       "           -2.7991e-01, -2.1909e-01],\n",
+       "          [-2.9288e-01, -3.5613e-01, -4.0697e-01,  ..., -3.9351e-01,\n",
+       "           -5.5637e-01, -5.5071e-04]]]], grad_fn=<ConvolutionBackward0>)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net_output"
    ]
   },
   {
@@ -665,7 +753,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.9.12 ('0726_noise2self')",
    "language": "python",
    "name": "python3"
   },
@@ -679,11 +767,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31671a60cee805c34c73116577b485118ff3a75c458d3004d49632c19702ac60"
+    "hash": "e5b7b4b87f1232292414b0b2465daa4c9a5fef42931fa5ac6e14cc171faea196"
    }
   }
  },
